src/_styles/country.css
.country__flag {
    display: block;
    object-fit: contain;
    margin: 0 auto;
}

.is-mobile .country__flag {
    width: 100%;
}

.is-desktop .country__flag {
    max-width: 100%;
    width: 768px;
    margin-top: 2em;
}

.country__name {
    font-size: 2.6em;
    margin: 1em 0 .3em;
    line-height: 1.1;
    text-align: center;
}

.is-mobile .country__name {
    font-size: 1.6em;
}

.country__data {
}

.country__data-item {
    display: flex;
}

.country__data-label {
    width: 48%;
    text-align: right;
    font-weight: 600;
    padding: .3em .3em;
    line-height: 1.1;
}

.country__data-value {
    width: 52%;
    text-align: left;
    padding: .3em .3em;
    line-height: 1.1;
}

